[Setup] testing with jest and tested value objects and [Refactored] password VO to have more validity checks to align with the standards

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,8 +7,9 @@
     "emitDecoratorMetadata": true,
     "strictPropertyInitialization": false,
     "resolveJsonModule": true,
-    "sourceMap": true
+    "sourceMap": true,
+    "isolatedModules": true
   },
-  "include": ["src/**/*"],
-  "exclude": ["node_modules"]
+  "include": ["src/**/*", "**/*.test.ts"],
+  "exclude": ["node_modules", "dist"]
 }
