--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "tsx watch src/index.ts",
     "build": "tsc && node dist/index.js ",
     "start": "node dist/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --config jest.config.js --detectOpenHandles"
   },
   "author": "Larz Thimoty S. Pal-ing",
   "license": "ISC",
@@ -18,12 +18,16 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
     "@types/helmet": "^0.0.48",
+    "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/mongoose": "^5.11.96",
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.14.1",
     "@types/nodemailer": "^6.4.17",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.3.2",
     "ts-node-dev": "^2.0.0",
+    "tsconfig-paths": "^4.2.0",
     "tsx": "^4.19.3",
     "typescript": "^5.8.3"
   },
