--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "tsx watch src/index.ts",
     "build": "tsc && node dist/index.js ",
     "start": "node dist/index.js",
-    "test": "jest --config jest.config.js --detectOpenHandles"
+    "test": "jest --config jest.config.js --detectOpenHandles",
+    "test-domain-user": "jest domain/user --detectOpenHandles"
   },
   "author": "Larz Thimoty S. Pal-ing",
   "license": "ISC",
